pp2/samples/tested/interface.decaf.test

*** Error line 30.
  Colorable s;
            ^
*** syntax error

